--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@codemirror/autocomplete",
-  "version": "6.3.0",
+  "version": "6.18.4",
   "description": "Autocompletion for the CodeMirror code editor",
   "scripts": {
     "test": "cm-runtests",
@@ -12,7 +12,7 @@
   ],
   "author": {
     "name": "Marijn Haverbeke",
-    "email": "marijnh@gmail.com",
+    "email": "marijn@haverbeke.berlin",
     "url": "http://marijnhaverbeke.nl"
   },
   "type": "module",
@@ -28,17 +28,11 @@
   "dependencies": {
     "@codemirror/language": "^6.0.0",
     "@codemirror/state": "^6.0.0",
-    "@codemirror/view": "^6.0.0",
-    "@lezer/common": "^1.0.0"
-  },
-  "peerDependencies": {
-    "@codemirror/language": "^6.0.0",
-    "@codemirror/state": "^6.0.0",
-    "@codemirror/view": "^6.0.0",
+    "@codemirror/view": "^6.17.0",
     "@lezer/common": "^1.0.0"
   },
   "devDependencies": {
-    "@codemirror/buildhelper": "^0.1.5"
+    "@codemirror/buildhelper": "^1.0.0"
   },
   "repository": {
     "type": "git",
